# relay

./: .env.example  .gitignore  README.md  README.uk.md  docker-compose.firebase.yml  docker-compose.production.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_device_tokens.py  0003_content_encryption.py  0004_device_token_locale.py  0005_token_jti.py  0006_message_idempotency.py
backend/app/: main.py  scripts_seed.py
backend/app/api/: deps.py
backend/app/api/routes/: attachments.py  auth.py  conversations.py  devices.py  messages.py  users.py
backend/app/core/: config.py  database.py  encryption.py  errors.py  observability.py  rate_limit.py  redis.py  security.py
backend/app/models/: __init__.py  attachment.py  auth.py  conversation.py  device.py  message.py  user.py
backend/app/schemas/: attachment.py  auth.py  common.py  conversation.py  device.py  message.py  user.py  ws.py
backend/app/services/: attachments.py  auth.py  conversations.py  mail.py  messages.py  presence.py  push.py  uploads.py  users.py
backend/app/tests/: conftest.py  test_config.py  test_encryption.py  test_mail.py  test_messenger.py  test_observability.py  test_presence.py  test_rate_limit.py  test_seed.py
backend/app/websocket/: events.py  manager.py  routes.py
docs/: project-overview.md
mobile/: .env.example  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mobile/scripts/: configure-android.mjs  generate-android-icons.mjs  patch-capacitor-cli.mjs
mobile/src/: main.ts  security.test.ts
mobile/src/api/: client.ts  types.ts
mobile/src/components/: EmptyState.vue  ErrorState.vue  LanguageSelector.vue  (+2 more)
scripts/: android-build.sh  backend-logs.sh  backend-migrate.sh  backend-production-start.sh  backend-start.sh  backend-test.sh  backup.sh  firebase-check.sh  health.sh  mobile-dev.sh  render-mermaid.sh  restore.sh  rotate-jwt-secrets.sh  security-audit.sh  smoke-messages.py  smoke-messages.sh
(+42 files in other folders)
