[project]
name = "relay-backend"
version = "0.1.0"
description = "FastAPI realtime messenger backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "pydantic-settings>=2.3.0",
  "pydantic[email]>=2.7.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
  "argon2-cffi>=23.1.0",
  "PyJWT>=2.8.0",
  "aiofiles>=24.1.0",
  "google-auth>=2.35.0",
  "httpx>=0.27.0",
  "requests>=2.32.0",
  "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "aiosqlite>=0.20.0",
  "ruff>=0.9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
